# ot-harjoitustyo

./: .coverage  .gitignore  README.MD  pyproject.toml
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: .coverage
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/htmlcov/: _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  _home_user__cache_pypoetry_virtualenvs_unicafe-LRQ8-o7J-py3_8_lib_python3_8_site-packages__pytest__io_saferepr_py.html  (+92 more)
src/logic/: bet.py  blackjackapp.py  deck.py  game.py  hand.py  wallet.py
src/ui/: bet_view.py  ui.py
(+102 files in other folders)
