[tool.poetry]
name = "ot-harjotustyo"
version = "0.1.0"
description = ""
authors = ["hennaroi <hennaroinisto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
